# fastapi-template

./: .gitignore  README.md  conftest.py  pyproject.toml
src/: main.py
src/business_logic/items/: __init__.py  get_all_items.py  get_item_by_id.py
src/business_logic/items/models/: get_all_items.py
src/data_access/items/: get_all_items.py  get_item_by_id.py
src/data_access/items/models/: __init__.py  get_all_items.py
src/data_access/orders/: get_order_by_id.py
src/dependencies/: get_db.py  get_user.py
src/dependencies/get_db/: get_db.py
src/dependencies/get_user/: __init__.py  get_user.py
src/domains/: __init__.py
src/domains/items/: __init__.py
src/domains/items/get_all_items/: __init__.py  get_all_items.py  test_get_all_items.py
src/domains/items/get_item_by_id/: __init__.py  get_item_by_id.py  test_get_item_by_id.py
src/domains/orders/: __init__.py
src/domains/orders/get_all_orders/: __init__.py  test_get_all_orders.py
src/domains/orders/get_order_by_id/: __init__.py  errors.py  get_order_by_id.py  models.py  test_get_order_by_id.py
src/routers/items/: __init__.py  get_all_items.py  get_item_by_id.py  test_get_all_items.py
src/routers/orders/: get_order_by_id.py
