[project]
name = "fast-api-tests"
version = "0.1.0"
description = "FastAPI Project Repository Example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pyclean>=3.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "uv-upsync>=2.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
